Added a structure mapper and PoseSelector

--- a/examples/FES_to_Structure_Mapper.ipynb
+++ b/examples/FES_to_Structure_Mapper.ipynb
@@ -82,7 +82,8 @@
    "metadata": {},
    "source": [
     "## Setup\n",
-    "This sets up functions to compute histograms and get FES from the program"
+    "This sets up functions to compute histograms and get FES from the program.<br/>\n",
+    "This is copied from from the thermomaps code. See `thermomaps-root/cli/plotting.py`"
    ]
   },
   {
@@ -226,7 +227,11 @@
    ],
    "source": [
     "ROOT_DIR=\"/home/venkata/python/PyRosetta/R1107/server/example5/iter0/\" # TODO: Change Accordingly (Select the correct path and pick the iteration you want to run the analysis for)\n",
+    "\n",
+    "# Constructing the object serializer to load saved objects\n",
     "OS = ObjectSerializer()\n",
+    "\n",
+    "# Read all headers in the saved file\n",
     "headers = OS.get_summary(ROOT_DIR+\"/multitraj.h5\", depth=0)\n",
     "print(headers)\n",
     "\n",
@@ -242,13 +247,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "064f3041-842a-4091-8c99-d3f6f148ef1d",
+   "metadata": {},
+   "source": [
+    "#### Important note\n",
+    "Sometimes `multitraj.h5` will be found as `iterxxx/mount/multitraj.h5`. In that case, manually, move the multitraj folder one step back to `iterxxx/multitraj.h5`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "23d37210-2410-4f4f-afbe-c544453cb81f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the multitraj file\n",
+    "# Select the multitraj file\n",
     "multitraj_path=ROOT_DIR+\"/multitraj.h5\"\n",
     "\n",
     "# Load the PCA\n",
@@ -264,7 +278,9 @@
    "metadata": {},
    "source": [
     "## Data generation\n",
-    "Construct the PCA vectors and save after attaching RMSD data"
+    "Construct the PCA vectors and save after attaching RMSD data<br/>\n",
+    "\n",
+    "**Note:** You do not need to run the next 2 cells if you've already run them once for the chosen `ROOT_DIR` folder"
    ]
   },
   {
@@ -328,7 +344,7 @@
    "id": "bb8f1e70-a0f0-42ff-9211-5fec3b6481cc",
    "metadata": {},
    "source": [
-    "### RMSD <-> PCA mapping\n",
+    "#### RMSD <-> PCA mapping\n",
     "**Note:** Before running this, you need to have run `TMaMD_PostProcess.ipynb` using the crystal structure as the reference. This will generate the RMSD data."
    ]
   },
@@ -384,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "81f7e4a7-1557-4a7b-bb9e-8bd0be681973",
    "metadata": {},
    "outputs": [
@@ -400,6 +416,8 @@
     }
    ],
    "source": [
+    "all_rmsd_data=np.load(ROOT_DIR+\"cluster_rmsds.npy\",allow_pickle=True)\n",
+    "cluster_ids=np.load(ROOT_DIR+\"cluster_ids.npy\")\n",
     "pca_rmsd_map=np.load(ROOT_DIR+\"/pca_rmsd_mapping.npy\")\n",
     "\n",
     "n_bins=40\n",
@@ -429,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "5f996aa3-12a1-4235-a0b3-215eb78f05a9",
    "metadata": {},
    "outputs": [
@@ -450,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "00595075-c19a-48dd-9d49-043428c6b727",
    "metadata": {},
    "outputs": [
@@ -490,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "3f244311-9783-4ac2-a8b3-c9ad90421768",
    "metadata": {},
    "outputs": [
@@ -515,13 +533,13 @@
     "x_ticks=x_ticks[::len(x_ticks)//2]\n",
     "\n",
     "plt.subplot(1,2,1)\n",
-    "plt.imshow(copied_FES,vmin=0,vmax=4)\n",
+    "plt.imshow(copied_FES,vmin=0,vmax=4) # TODO: Change accordingly (vmin and vmax are the upper and lower limits on the colorbar. Choosing these values nicely can highlight deep/shallow regions of the surface)\n",
     "plt.xlabel(\"$PC_1$ (index)\")\n",
     "plt.ylabel(\"$PC_2$ (index)\")\n",
     "plt.colorbar()\n",
     "plt.title(\"Free Energy\")\n",
     "plt.subplot(1,2,2)\n",
-    "plt.imshow(copied_RMSD,vmin=3,vmax=8)\n",
+    "plt.imshow(copied_RMSD,vmin=3,vmax=8) # TODO: Change accordingly (vmin and vmax are the upper and lower limits on the colorbar. Choosing these values nicely can highlight deep/shallow regions of the surface)\n",
     "plt.xlabel(\"$PC_1$ (index)\")\n",
     "plt.ylabel(\"$PC_2$ (index)\")\n",
     "plt.title(\"RMSD\")\n",
@@ -540,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "3aca6e16-2524-4dcb-aee1-517ab02129c7",
    "metadata": {},
    "outputs": [
@@ -550,20 +568,22 @@
        "(True, True)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Pick the FES grid object at the chosen temperature\n",
     "copied_FES=my_FES[TEMP][3].copy()\n",
-    "np.all(np.abs(my_FES[TEMP][-2]-bp_xedges)<5e-3),np.all(np.abs(my_FES[TEMP][-1]-bp_yedges)<5e-3)\n",
-    "# Safety check to make sure that the values of the PCs in both plots are close enough"
+    "\n",
+    "# Safety check to make sure that the values of the PCs in both plots are close enough (Should say 'True','True')\n",
+    "np.all(np.abs(my_FES[TEMP][-2]-bp_xedges)<5e-3),np.all(np.abs(my_FES[TEMP][-1]-bp_yedges)<5e-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "2e8d01d7-82ed-4066-a7e2-e6efa7187f91",
    "metadata": {},
    "outputs": [
@@ -597,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "a757bff6-8386-4e8c-99a0-5ed5c798902a",
    "metadata": {},
    "outputs": [
@@ -636,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "c10d9c35-6073-4b3b-abb0-add8446b499f",
    "metadata": {},
    "outputs": [
@@ -663,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "43c0029e-bbed-4b03-93b2-bb8d93ab041e",
    "metadata": {},
    "outputs": [
@@ -673,7 +693,7 @@
        "Text(0, 0.5, 'Min of RMSD for cluster')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
