--- a/examples/PoseSelector.ipynb
+++ b/examples/PoseSelector.ipynb
@@ -442,7 +442,7 @@
     "\n",
     "def plot_RMSD_over_PCA():\n",
     "    plt.figure(figsize=(10,8))\n",
-    "    plt.imshow(bin_averages.T,extent=[bp_xedges[0], bp_xedges[-1], bp_yedges[0], bp_yedges[-1]], origin='lower', aspect='auto', cmap='binary_r',vmin=1,vmax=14)\n",
+    "    plt.imshow(bin_averages.T,extent=[bp_xedges[0], bp_xedges[-1], bp_yedges[0], bp_yedges[-1]], origin='lower', aspect='auto', cmap='binary_r',vmin=1)\n",
     "    plt.colorbar(label=\"RMSD (A)\")\n",
     "    plt.title(\"RMSD with PCs 0 and 1\",fontsize=24)\n",
     "    plt.xticks(fontsize=18)\n",
