Clarified what parts must be run after all iterations

--- a/examples/PoseSelector.ipynb
+++ b/examples/PoseSelector.ipynb
@@ -822,7 +822,7 @@
    "id": "5e99d329-856c-4f34-94aa-46424a28059b",
    "metadata": {},
    "source": [
-    "### Extra step after running above cells for EACH iteration"
+    "## Final step after running above cells for EACH iteration"
    ]
   },
   {
