Preliminary setup of LoadedXTC to be able to process trajectories with atoms missing

--- a/PyRosetta/General.ipynb
+++ b/PyRosetta/General.ipynb
@@ -23,6 +23,7 @@
     }
    ],
    "source": [
+    "import mdtraj as md\n",
     "import pyrosetta\n",
     "from pyrosetta import init, rosetta\n",
     "from pyrosetta.rosetta import core\n",
@@ -118,6 +119,7 @@
     "        return ret\n",
     "    def all_generic(self,param): return self.generic_all(param)\n",
     "    def get_resid(self,chn,idx): return self.pdb_info().pdb2pose(chn,int(idx))\n",
+    "    def num_atoms(self): return self.total_atoms()\n",
     "    def get_atom(self,rid,aid):\n",
     "        if type(rid)!=int: rid=rid.seqpos()\n",
     "        if type(aid)==int: return pyrosetta.AtomID(aid,rid)\n",
@@ -132,12 +134,8 @@
     "                if ignore_Hs and resid.atom_name(i+1).strip()[0]=='H': continue\n",
     "                ret.append(resid.atom_name(i+1).strip() if stripped else resid.atom_name(i+1))\n",
     "        return np.array(ret,dtype=str)\n",
-    "    def get_atom_count(self):\n",
-    "        cnt=0\n",
-    "        for rid in range(len(self)):\n",
-    "            resid=self.residue(rid+1)\n",
-    "            cnt+=resid.natoms()\n",
-    "        return cnt\n",
+    "    \n",
+    "    def get_atom_count(self): return self.num_atoms()\n",
     "\n",
     "    def get_conformation_parameter(self,rid,par=\"bond_length\",*args):\n",
     "        conform=self.conformation()\n",
@@ -235,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ba5af45c-2c26-4c48-b96a-aea5988941c0",
    "metadata": {},
    "outputs": [],
@@ -246,18 +244,26 @@
     "\n",
     "DEVICE=torch.device(\"cpu\")\n",
     "TORCH_FLOAT=torch.float32\n",
-    "def assign_pose_by_pt(pose,pt_pose):\n",
+    "def assign_pose_by_array(pose,pose_np,res_idx_map=None):\n",
     "    # Pose must be LoadedPDB object\n",
-    "    pose_np=pt_pose.detach().cpu().numpy()\n",
     "    N=0\n",
     "    for i in range(len(pose.sequence())):\n",
-    "        for atidx,atom in enumerate(pose.residue(i+1).atoms()):\n",
+    "        if res_idx_map is not None:\n",
+    "            lst=res_idx_map[i]\n",
+    "        else:\n",
+    "            lst=list(range(len(pose.residue(i+1).atoms())))\n",
+    "        for atidx in lst:\n",
+    "            if res_idx_map is not None: atidx-=1\n",
     "            mycrd=rosetta.numeric.xyzVector_double_t(pose_np[N,0],pose_np[N,1],pose_np[N,2])\n",
     "            pose.residue(i+1).set_xyz(atidx+1,mycrd)\n",
     "            #atom.xyz(mycrd)\n",
     "            #print(atom.xyz())\n",
     "            N+=1\n",
     "    return pose\n",
+    "def assign_pose_by_pt(pose,pt_pose,res_idx_map=None):\n",
+    "    pose_np=pt_pose.detach().cpu().numpy()\n",
+    "    return assign_pose_by_array(pose,pose_np,res_idx_map)\n",
+    "    \n",
     "def get_torch_rep(pose,ignore_Hs=True,atom_selector=None):\n",
     "    # Can include an atom selector. It expects 2 parameters - 1 residue object and 1 atom index (int) and outputs True (select) / False (don't select)\n",
     "    if type(pose)==rosetta.core.pose.Pose: pose=LoadedPDB(pose)\n",
@@ -272,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cfc0b6b8-3213-47b1-ade8-c49a78a2a4f3",
    "metadata": {},
    "outputs": [],
@@ -287,19 +293,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d3f4d502-4a6b-4f41-985e-97851900da69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_rmsd(pose1,pose2,atomwise=True,include_Hs=False):\n",
+    "def get_rmsd(pose1,pose2,atomwise=True,include_Hs=False,selection1=None,selection2=None):\n",
     "    # If atomwise is false, it works residue-wise (Both methods are roughly equivalent as long as residues are of similar sizes)\n",
     "    # Does NOT align the poses\n",
     "    \n",
     "    #pose1 and pose2 should be LoadedPDB objects\n",
     "    if type(pose1)!=LoadedPDB: pose1=LoadedPDB(pose1)\n",
     "    if type(pose2)!=LoadedPDB: pose2=LoadedPDB(pose2)\n",
+    "    r1=get_torch_rep(pose1,ignore_Hs=False)\n",
+    "    r2=get_torch_rep(pose2,ignore_Hs=False)\n",
     "\n",
+    "    selection=None\n",
+    "    if (not include_Hs) or (selection1 is not None) or (selection2 is not None):\n",
+    "        if selection1 is None:\n",
+    "            selection1=torch.ones(len(r1),dtype=torch.bool)\n",
+    "            if (not include_Hs): selection1[hydrogen_indices(pose1)]=False\n",
+    "        if selection2 is None:\n",
+    "            selection2=torch.ones(len(r2),dtype=torch.bool)\n",
+    "            if (not include_Hs): selection2[hydrogen_indices(pose2)]=False\n",
+    "        selection=True\n",
+    "\n",
+    "    \n",
+    "    if selection is not None:\n",
+    "        r1=r1[selection1]\n",
+    "        r2=r2[selection2]\n",
+    "    '''\n",
     "    total_square_dev=0\n",
     "    Ntot=0\n",
     "    for i,r1 in enumerate(pose1):\n",
@@ -320,12 +343,15 @@
     "            square_dev/=N\n",
     "        #print(square_dev)\n",
     "        total_square_dev+=square_dev\n",
-    "    return np.sqrt(total_square_dev/Ntot)"
+    "    return np.sqrt(total_square_dev/Ntot)\n",
+    "    '''\n",
+    "    v=torch.sum((r1-r2)**2,dim=-1)\n",
+    "    return torch.sqrt(torch.mean(v)).item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1ecc706f-5473-45d8-9786-4e091ece104f",
    "metadata": {},
    "outputs": [],
@@ -395,6 +421,166 @@
     "    aligned_pose=pose_struct.clone()\n",
     "    assign_pose_by_pt(aligned_pose,pose)\n",
     "    return aligned_pose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "19def6a1-3db6-4303-9e9b-d07c3c2bfd83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LoadedXTC:\n",
+    "    def __init__(self,xtc,pdb):\n",
+    "        self.traj=md.load(xtc,top=pdb)\n",
+    "        self.ref_pdb=pdb\n",
+    "        self.ref_obj=LoadedPDB(pdb)\n",
+    "        self.n_frames=len(self.traj)\n",
+    "        self.curframe=self.traj[0]\n",
+    "        self.found_atoms=None\n",
+    "        \n",
+    "        self.mark_atoms_by_traj()\n",
+    "        self.populateFromFrame()\n",
+    "        self.frame_idx=0\n",
+    "\n",
+    "    def __len__(self): return self.n_frames\n",
+    "    def __iter__(self):\n",
+    "        self.frame_idx=0\n",
+    "        self.curframe=self.traj[0]\n",
+    "        self.found_atoms=None\n",
+    "\n",
+    "        self.mark_atoms_by_traj()\n",
+    "        self.populateFromFrame()\n",
+    "        return self\n",
+    "    def __next__(self):\n",
+    "        if self.frame_idx>=len(self): raise StopIteration()\n",
+    "        else:\n",
+    "            self.curframe=self.traj[self.frame_idx]\n",
+    "            self.populateFromFrame()\n",
+    "            self.frame_idx+=1\n",
+    "            return self\n",
+    "    \n",
+    "    def chooseFrame(self,i):\n",
+    "        self.curframe=self.traj[i]\n",
+    "        self.populateFromFrame()\n",
+    "\n",
+    "    def get_mapped_positions(self,mapping=None):\n",
+    "        #if mapping is None: mapping=self.get_atom_map_as_atom_index()\n",
+    "        #return self.curframe.xyz[0][mapping],mapping\n",
+    "        return self.curframe.xyz[0],None\n",
+    "\n",
+    "    def populateFromFrame(self):\n",
+    "        self.curpose=LoadedPDB(self.ref_obj.clone())\n",
+    "        self.curpose=assign_pose_by_array(self.curpose,self.curframe.xyz[0]*10,self.found_atoms)\n",
+    "\n",
+    "    def mark_atoms_by_traj(self):\n",
+    "        self.found_atoms=[]\n",
+    "        for i in range(len(self.ref_obj)):\n",
+    "            rosetta_resid=self.ref_obj.residue(i+1)\n",
+    "            md_resid=self.traj.topology.residue(i)\n",
+    "            resid_atoms=[]\n",
+    "            for md_atom in md_resid.atoms:\n",
+    "                idx=rosetta_resid.atom_index(md_atom.name)\n",
+    "                if idx<=0: print(\"WARN: Not found:\",md_atom,\"in rosetta pose\")\n",
+    "                resid_atoms.append(idx)\n",
+    "            self.found_atoms.append(resid_atoms)\n",
+    "\n",
+    "    def pose(self): return self.curpose\n",
+    "    def get_atom_map(self): return self.found_atoms\n",
+    "    def get_atom_map_as_atom_index(self):\n",
+    "        ret=[]\n",
+    "        # Flatten the found atoms array\n",
+    "        N=0\n",
+    "        for residx,resarr in enumerate(self.found_atoms):\n",
+    "            resid=self.traj.topology.residue(residx)\n",
+    "            for ai in resarr: ret.append(ai+N)\n",
+    "            N+=resid.n_atoms\n",
+    "        return np.array(ret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4aa1817a-7f65-433a-8712-8e8c3ffbbdd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def match_atoms(pose1,pose2,skipH=False,filter_1=None,filter_2=None):\n",
+    "    # Must return a pair of index-lists giving matched up atom indices\n",
+    "    idx1,idx2=[],[]\n",
+    "    N1=0\n",
+    "    N2=0\n",
+    "    for i in range(1,len(pose1)+1):\n",
+    "        res1=pose1.residue(i)\n",
+    "        res2=pose2.residue(i)\n",
+    "        for aidx1,atom1 in enumerate(res1.atoms()):\n",
+    "            if filter_1 is not None:\n",
+    "                if aidx1+1 not in filter_1[i-1]: continue\n",
+    "            found=False\n",
+    "            n1=res1.atom_name(aidx1+1).strip()\n",
+    "            if skipH and n1[0]=='H': continue\n",
+    "            for aidx2,atom2 in enumerate(res2.atoms()):\n",
+    "                if filter_2 is not None:\n",
+    "                    if aidx2+1 not in filter_2[i-1]: continue\n",
+    "                n2=res2.atom_name(aidx2+1).strip()\n",
+    "                if skipH and n2[0]=='H': continue\n",
+    "                if n1==n2:\n",
+    "                    found=True\n",
+    "                    break\n",
+    "            if found:\n",
+    "                idx1.append(N1+aidx1)\n",
+    "                idx2.append(N2+aidx2)\n",
+    "        N1+=res1.natoms()\n",
+    "        N2+=res2.natoms()\n",
+    "    return np.array(idx1),np.array(idx2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3c76e072-ccf9-4ac7-a8dd-a55eba4c4205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def match_and_align_poses(ref,pose,max_iter=2000,step_size=6e-2,silent=False,ignore_Hs=True,matchings=None,**kwargs):\n",
+    "    if matchings is None:\n",
+    "        m1,m2=match_atoms(ref,pose,skipH=ignore_Hs)\n",
+    "    else:\n",
+    "        m1,m2=matchings[0],matchings[1]\n",
+    "    sel_ref=m1\n",
+    "    sel_pose=m2\n",
+    "    return align_poses(ref,pose,max_iter,step_size,silent=silent,ignore_Hs=False,selection_pose=sel_pose,selection_ref=sel_ref,**kwargs),sel_ref,sel_pose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "775a0bea-8964-4d20-bfa1-fce6a762d105",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref_pose=LoadedPDB(\"/home/venkata/python/PyRosetta/R1107/7qr4_clean_noprotein.pdb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5aac0efa-767b-4005-9a5c-89ebcf16b08a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyrosetta.rosetta.numeric.xyzVector_double_t at 0x74cd7cbb5d30>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ref_pose.residue(1).xyz(1)"
    ]
   }
  ],
