Added a shift-mapping functionality to the XTC Loader

--- a/PyRosetta/General.ipynb
+++ b/PyRosetta/General.ipynb
@@ -464,10 +464,20 @@
     "        self.curframe=self.traj[i]\n",
     "        self.populateFromFrame()\n",
     "\n",
-    "    def get_mapped_positions(self,mapping=None):\n",
-    "        #if mapping is None: mapping=self.get_atom_map_as_atom_index()\n",
-    "        #return self.curframe.xyz[0][mapping],mapping\n",
-    "        return self.curframe.xyz[0],None\n",
+    "    def shift_mapping(self,mapping):\n",
+    "        # Mapping is a list of indices starting from 0, assuming that all the rosetta atoms are present in the trajectory.\n",
+    "        md_found=self.get_atom_map_as_atom_index() # Uses rosetta atom indices (starts indexing from 1)\n",
+    "        md_found-=1 # Corrects for this\n",
+    "\n",
+    "        new_mapping=[]\n",
+    "        deleted_indices=[]\n",
+    "        for i,idx in enumerate(mapping):\n",
+    "            tidx=np.where(md_found==idx)[0]\n",
+    "            if len(tidx)>=2: raise ValueError(\"Mapping seems to be corrupt. Multiple atoms are mapping to the same index\")\n",
+    "            if len(tidx): new_mapping.append(tidx.item())\n",
+    "            else: deleted_indices.append(i)\n",
+    "        return np.array(new_mapping),deleted_indices\n",
+    "        \n",
     "\n",
     "    def populateFromFrame(self):\n",
     "        self.curpose=LoadedPDB(self.ref_obj.clone())\n",
