Automatically save figures in TMaMD PostProcess

--- a/examples/TMaMD_PostProcess_Generalized.ipynb
+++ b/examples/TMaMD_PostProcess_Generalized.ipynb
@@ -746,6 +746,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "83990671-61e5-4d63-8962-28d63e83e026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    os.mkdir(ROOT_DIR+\"/aggregate_figs/\")\n",
+    "except:\n",
+    "    pass # Directory exists"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "id": "b06871f4-ba2d-4d0e-b55b-0486b4c762b6",
    "metadata": {},
@@ -791,6 +804,7 @@
     "plt.xticks(np.arange(len(means)),np.arange(len(means)),fontsize=18)\n",
     "plt.ylabel(\"RMSD (A)\",fontsize=20)\n",
     "plt.yticks(fontsize=18)\n",
+    "plt.savefig(ROOT_DIR+\"/aggregate_figs/RMSD_mean_median.png\")\n",
     "#plt.plot(medians)"
    ]
   },
@@ -865,7 +879,8 @@
     "plt.ylabel(\"RMSD (A)\",fontsize=20)\n",
     "plt.xticks(np.arange(len(bplot[\"boxes\"]))+1,np.arange(len(bplot[\"boxes\"])),fontsize=18)\n",
     "plt.xlabel(\"Iteration\",fontsize=20)\n",
-    "plt.ylim(0,25) # TODO: Change accordingly. (You can play with it to get a good looking plot."
+    "plt.ylim(0,25) # TODO: Change accordingly. (You can play with it to get a good looking plot.\n",
+    "plt.savefig(ROOT_DIR+\"/aggregate_figs/RMSD_boxplot.png\")"
    ]
   },
   {
