Rosetta PostProcess now saves figures

--- a/examples/Rosetta_PostProcess_MDTraj.ipynb
+++ b/examples/Rosetta_PostProcess_MDTraj.ipynb
@@ -251,6 +251,7 @@
     "plt.yticks(fontsize=18)\n",
     "plt.ylabel(\"RMSD (A)\",fontsize=20)\n",
     "plt.xticks()\n",
+    "plt.savefig(ROOT_DIR+\"/rosetta/clustering_figs/RMSD_distribution.png\")\n",
     "#plt.ylim(0,2)"
    ]
   },
