FES-RMSD mapper saves mapped figure

--- a/examples/FES_to_Structure_Mapper.ipynb
+++ b/examples/FES_to_Structure_Mapper.ipynb
@@ -545,7 +545,7 @@
     "plt.title(\"RMSD\")\n",
     "#plt.xticks(np.arange(n_bins)[::n_bins//2],x_ticks)\n",
     "plt.colorbar()\n",
-    "plt.show()"
+    "plt.savefig(ROOT_DIR+\"/mount/figs/RMSD_FES_comparison.png\")"
    ]
   },
   {
