Corrected RMSD range for plot in FES-RMSD Mapper

--- a/examples/FES_to_Structure_Mapper.ipynb
+++ b/examples/FES_to_Structure_Mapper.ipynb
@@ -434,7 +434,7 @@
     "\n",
     "def plot_RMSD_over_PCA():\n",
     "    plt.figure(figsize=(10,8))\n",
-    "    plt.imshow(bin_averages.T,extent=[bp_xedges[0], bp_xedges[-1], bp_yedges[0], bp_yedges[-1]], origin='lower', aspect='auto', cmap='binary_r',vmin=1,vmax=14)\n",
+    "    plt.imshow(bin_averages.T,extent=[bp_xedges[0], bp_xedges[-1], bp_yedges[0], bp_yedges[-1]], origin='lower', aspect='auto', cmap='binary_r',vmin=1,vmax=28) # TODO: Change Accordingly (Change vmin and vmax to get a good looking plot. It sets the scale of the RMSD colorbar)\n",
     "    plt.colorbar(label=\"RMSD (A)\")\n",
     "    plt.title(\"RMSD with PCs 0 and 1\",fontsize=24)\n",
     "    plt.xticks(fontsize=18)\n",
