Save poses after aligning too: TMaMD PostProcess

--- a/examples/TMaMD_PostProcess_Generalized.ipynb
+++ b/examples/TMaMD_PostProcess_Generalized.ipynb
@@ -641,8 +641,8 @@
    ],
    "source": [
     "# Choose dump name based on analysis type\n",
-    "if ANALYSIS_TYPE==\"crystal\": outfile=\"TM_MD_best_expt.pdb\"\n",
-    "else: outfile=\"TM_MD_best_rosetta.pdb\"\n",
+    "if ANALYSIS_TYPE==\"crystal\": outfile=\"TM_MD_best_expt\"\n",
+    "else: outfile=\"TM_MD_best_rosetta\"\n",
     "print(outfile)"
    ]
   },
@@ -729,11 +729,16 @@
     "        raise ValueError(\"Structure was not found on iteration \"+str(it))\n",
     "    \n",
     "    print(cluster,\"is the file with the best pose (by RMSD) for iteration\",it)\n",
-    "    print(\"Final RMSD:\",cluster_rmsds[cid][req_id],\"\\n\")\n",
+    "    print(\"Final RMSD:\",cluster_rmsds[cid][req_id])\n",
     "\n",
     "    # Save the structure\n",
     "    template_frame.atoms.positions=traj[req_id].positions\n",
-    "    mda.Writer(ROOT_DIR+\"/\"+it+\"/\"+outfile,multiframe=False).write(template_frame)"
+    "    mda.Writer(ROOT_DIR+\"/\"+it+\"/\"+outfile+\".pdb\",multiframe=False).write(template_frame)\n",
+    "\n",
+    "    newpose=LoadedPDB(ROOT_DIR+\"/\"+it+\"/\"+outfile+\".pdb\")\n",
+    "    newpose_aligned=align_pose(ref_pose,newpose,silent=True,max_iter=4000)\n",
+    "    newpose_aligned.dump_pdb(ROOT_DIR+\"/\"+it+\"/\"+outfile+\"_aligned.pdb\")\n",
+    "    print(\"Saved aligned pose to:\",ROOT_DIR+\"/\"+it+\"/\"+outfile+\"_aligned.pdb\\n\")"
    ]
   },
   {
