Added line plot to PoseSelector

--- a/examples/PoseSelector.ipynb
+++ b/examples/PoseSelector.ipynb
@@ -972,6 +972,7 @@
     "plt.figure(figsize=(10,8))\n",
     "plt.title(\"Picking top \"+str(USE_STRUCT)+\" model(s) from the top \"+str(USE_CLUST)+\" clusters\",fontsize=24)\n",
     "plt.scatter(itnos,lowrmsds,s=100)\n",
+    "plt.plot(itnos,lowrmsds)\n",
     "plt.xticks(fontsize=18)\n",
     "plt.yticks(fontsize=18)\n",
     "plt.xlabel(\"Iteration #\",fontsize=20)\n",
