Ligand Handler now has conformer generation

--- a/CADD/LigandHandler.ipynb
+++ b/CADD/LigandHandler.ipynb
@@ -10,7 +10,24 @@
     "from rdkit import Chem\n",
     "from rdkit.Chem.Scaffolds import MurckoScaffold\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from rdkit.Chem import rdDepictor\n",
+    "from rdkit.Chem import rdDistGeom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88a00753-9d46-4749-b721-8ab656332655",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generateConformersFor(smi,nconf=10,addH=True):\n",
+    "    mol=Chem.MolFromSmiles(smi)\n",
+    "    if addH: mol=Chem.AddHs(mol)\n",
+    "    rdDistGeom.EmbedMolecule(mol)\n",
+    "    rdDistGeom.EmbedMultipleConfs(mol,nconf)\n",
+    "    return mol"
    ]
   },
   {
@@ -150,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
