Implemented a better mol2 reader

--- a/CADD/MOL2Reader.ipynb
+++ b/CADD/MOL2Reader.ipynb
@@ -8,7 +8,12 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import rdkit\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import rdDepictor\n",
+    "from rdkit.Chem import rdDistGeom\n",
+    "from rdkit.Chem import AllChem"
    ]
   },
   {
@@ -127,6 +132,164 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "541928c0-0c31-4741-83a7-203adfffcc64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mol2Writer:\n",
+    "    amide_smarts = Chem.MolFromSmarts('[OX1]=CN')\n",
+    "    amide_pl_smarts = Chem.MolFromSmarts('[#7]-,=[#6]-,=[#7]')\n",
+    "    carboxylate_smarts = Chem.MolFromSmarts('[#6]C(=O)[O;H,-]')\n",
+    "    rdkit2sybyl = {\n",
+    "        '6SP3False': 'C.3',    '6SP2False': 'C.2',    '6SPFalse': 'C.1',      '6SP2True': 'C.ar',\n",
+    "        '7SP3False': 'N.3',    '7SP3False_4': 'N.4', \n",
+    "        '7SP2False': 'N.2',    '7SP2False_4':'N.2',   '7SP2True': 'N.ar',    '7SP2True_4': 'N.ar',     \n",
+    "        '7SP2False_am': 'N.am',   'N_pl':'N.pl',\n",
+    "        '7SPFalse': 'N.1',     '7SPFalse_4': 'N.1',   \n",
+    "        '8SP3False': 'O.3',    '8SP2False': 'O.2',    '8SP2False_co2': 'O.co2',  \n",
+    "        '9SP3False':  'F',     '17SP3False':'Cl',     '35SP3False': 'Br',     '53SP3False': 'I',\n",
+    "        '15SP3False':'P.3',\n",
+    "        '16SP3False':'S.3',    '16SP2False':'S.2',    # '16SP2False':'S.O',     '16SP2False':'S.O2',\n",
+    "        '1UNSPECIFIEDFalse': 'H',\n",
+    "        '11SFalse': 'Na', '12SFalse': 'Mg', '13SFalse': 'Al', '19SFalse': 'K', '20SFalse': 'Ca',\n",
+    "        '26SFalse': 'Fe', '29SFalse': 'Cu', '30SFalse': 'Zn',\n",
+    "    }\n",
+    "    \n",
+    "    idx2element = {1:'H', 6:'C', 7:'N', 8:'O', 9:'F', 15:'P', 16:'S',\n",
+    "                  11:'Na', 12:'Mg', 13:'Al', 14:'Si', 3:'Li', 4:'P', 5:'B',\n",
+    "                  19:'K', 20:'Ca', 26:'Fe', 29:'Cu', 30:'Zn',\n",
+    "                  17:'Cl', 35:'Br', 53:'I'}\n",
+    "    \n",
+    "    bond2type = {1.0:'1', 1.5:'ar', 2.0:'2', 3.0:'3'}\n",
+    "    \n",
+    "    # atom_id  atom_name  x  y  z  atom_type  subst_id  subst_name  charge \n",
+    "    atom_base_str = '{:>7d} {:<4s}     {:>9.4f} {:>9.4f} {:>9.4f} {:<5s}    {:>2d} {:>3s} {:>9.4f}\\n'\n",
+    "    # bond_id  origin_atom_id  target_atom_id  bond_type  \n",
+    "    bond_base_str = '{:>6d} {:>4d} {:>4d} {:<2s}\\n'\n",
+    "\n",
+    "    def __init__(self,mol):\n",
+    "        self.mol=mol\n",
+    "\n",
+    "    def addCharge(self):\n",
+    "        AllChem.ComputeGasteigerCharges(self.mol)\n",
+    "\n",
+    "    def __call__(self,molname=\"UNL\",conformer=-1): return self._mol_to_mol2_block(self.mol, molname, use_conf=conformer)\n",
+    "    def writeAllConformers(self,molname=\"UNL\"):\n",
+    "        nconf=self.mol.GetNumConformers()\n",
+    "        s=\"\"\n",
+    "        for i in range(nconf):\n",
+    "            s+=self._mol_to_mol2_block(self.mol, molname, i)\n",
+    "        s+=\"\\n\"\n",
+    "        return s\n",
+    "\n",
+    "    def _mol_to_mol2_block(self, mol, mol_name=\"UNL\", use_conf=-1):\n",
+    "        \"\"\"Write molecule in MOL2 file as string\n",
+    "    \n",
+    "        Args:\n",
+    "            mol: rdMol, molecule\n",
+    "            mol_name: str, molecule name to set as name in mol2 file\n",
+    "        \"\"\"\n",
+    "        mol2_blk = ''\n",
+    "    \n",
+    "        mol2_blk += '@<TRIPOS>MOLECULE\\n{}\\n{:<3d} {:<3d} 1 0 0\\nSMALL\\nGASTEIGER\\n'.format(\n",
+    "                    mol_name, mol.GetNumAtoms(), mol.GetNumBonds())\n",
+    "    \n",
+    "        conf = mol.GetConformer(use_conf)\n",
+    "    \n",
+    "        mol2_blk += '@<TRIPOS>ATOM\\n'\n",
+    "    \n",
+    "        # processing guadinium bonds TODO\n",
+    "        # pass\n",
+    "    \n",
+    "        # nitrogen trigonal planar \n",
+    "        if mol.HasSubstructMatch(Mol2Writer.amide_pl_smarts):\n",
+    "            amide_pl_flag = True    \n",
+    "            amide_pl_matched_atoms = []\n",
+    "            for pair in mol.GetSubstructMatches(Mol2Writer.amide_pl_smarts):\n",
+    "                amide_pl_matched_atoms.extend(pair)\n",
+    "        else:\n",
+    "            amide_pl_flag = False\n",
+    "    \n",
+    "        # processing amide bonds\n",
+    "        if mol.HasSubstructMatch(Mol2Writer.amide_smarts):\n",
+    "            amide_flag = True    \n",
+    "            amide_matched_atoms = []\n",
+    "            for pair in mol.GetSubstructMatches(Mol2Writer.amide_smarts):\n",
+    "                amide_matched_atoms.extend(pair)\n",
+    "        else:\n",
+    "            amide_flag = False\n",
+    "        \n",
+    "        # processing carboxyllate O\n",
+    "        if mol.HasSubstructMatch(Mol2Writer.carboxylate_smarts):\n",
+    "            carboxy_flag = True\n",
+    "            carboxy_matched_atoms = []\n",
+    "            for pair in mol.GetSubstructMatches(Mol2Writer.carboxylate_smarts):\n",
+    "                carboxy_matched_atoms.extend(pair)\n",
+    "        else:\n",
+    "            carboxy_flag = False\n",
+    "        \n",
+    "        # travese all atoms and set atom type\n",
+    "        for atom in mol.GetAtoms():\n",
+    "            #if atom.GetAtomicNum() != 8: continue\n",
+    "            key = str(atom.GetAtomicNum()) + str(atom.GetHybridization()) + str(atom.GetIsAromatic())\n",
+    "            \n",
+    "            # N.4\n",
+    "            if atom.GetAtomicNum() == 7:\n",
+    "                if atom.GetFormalCharge()==1:\n",
+    "                    key += '_4' # N.4 and N.pl\n",
+    "                elif amide_flag:\n",
+    "                    if atom.GetIdx() in amide_matched_atoms:\n",
+    "                        key += '_am' # N.am\n",
+    "                elif amide_pl_flag:\n",
+    "                    if atom.GetIdx() in amide_pl_matched_atoms:\n",
+    "                        key = 'N_pl' # N.pl\n",
+    "    \n",
+    "    \n",
+    "            # O in CO2\n",
+    "            if atom.GetAtomicNum() == 8 and carboxy_flag:\n",
+    "                if atom.GetIdx() in carboxy_matched_atoms:\n",
+    "                    key += '_co2'\n",
+    "            \n",
+    "            atom_id = atom.GetIdx() + 1\n",
+    "            atom_name = Mol2Writer.idx2element[atom.GetAtomicNum()]\n",
+    "            coord = conf.GetAtomPosition(atom.GetIdx())\n",
+    "            atom_type = Mol2Writer.rdkit2sybyl[key]\n",
+    "            subst_id = 1\n",
+    "            subst_name = 'UNL'\n",
+    "            try:\n",
+    "                charge = atom.GetPropsAsDict()['_GasteigerCharge']\n",
+    "            except KeyError:\n",
+    "                charge = 0.00\n",
+    "            \n",
+    "            mol2_blk += Mol2Writer.atom_base_str.format(atom_id, atom_name, coord.x, coord.y, coord.z,\n",
+    "                                atom_type, subst_id, subst_name, charge)\n",
+    "    \n",
+    "        mol2_blk += '@<TRIPOS>BOND\\n'\n",
+    "    \n",
+    "        # traverse all bonds\n",
+    "        for bond in mol.GetBonds():\n",
+    "            bond_id = bond.GetIdx()+1\n",
+    "            origin_atom_id = bond.GetBeginAtomIdx()+1\n",
+    "            target_atom_id = bond.GetEndAtomIdx()+1\n",
+    "            bond_type = Mol2Writer.bond2type[bond.GetBondTypeAsDouble()]\n",
+    "            if amide_flag:\n",
+    "                origin_atom = mol.GetAtomWithIdx(origin_atom_id-1).GetAtomicNum()\n",
+    "                target_atom = mol.GetAtomWithIdx(target_atom_id-1).GetAtomicNum()\n",
+    "                if bond.GetBeginAtomIdx() in amide_matched_atoms \\\n",
+    "                    and bond.GetEndAtomIdx() in amide_matched_atoms \\\n",
+    "                    and (origin_atom == 7 or target_atom == 7):\n",
+    "                    bond_type = 'am'\n",
+    "    \n",
+    "            mol2_blk += Mol2Writer.bond_base_str.format(bond_id, origin_atom_id, target_atom_id, bond_type)\n",
+    "            \n",
+    "        mol2_blk += '@<TRIPOS>SUBSTRUCTURE\\n     1 UNL     1\\n'\n",
+    "    \n",
+    "        return mol2_blk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "876eb755-e3f9-4596-806b-3ab9f494630f",
    "metadata": {},
    "outputs": [],
@@ -151,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
